# MongoDB_homework

./: .env.example  README.md  REPORT.md  pyproject.toml
memory/: MEMORY.md  feedback_python_poetry.md
src/: db.py  indexes.py  main.py  queries.py  schema.py  seed.py
